Fix Chrome issue (Blurred font bold and img)

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ nav .logo {
 nav .logo img{
 	display: block;
 	max-height:100%;
+	will-change: transform;
 }
 
 nav ul {
@@ -90,7 +91,7 @@ nav li .red {
 nav .current {
 	border-bottom-style: solid;
 	border-bottom-color: var(--bleuclair);
-	font-weight: bold;
+	font-family: ClanOTBold;
 }
 
 nav .bars {
@@ -194,8 +195,12 @@ nav .bars img {
 
 /*Club Style*/
 
+.clubMain{
+	width: 100%;
+}
+
 #map {
-	flex: 3;
+	width:60%;
 	fill: var(--gris);
 	stroke: white;
 	stroke-width: 6;
@@ -213,8 +218,7 @@ nav .bars img {
 	stroke: none;
 	fill: var(--bleufonce);
 	font-size: 3em;
-	font-family: ClanOTNews;
-	font-weight: bold;
+	font-family: ClanOTBold;
 }
 
 .map-club path {
@@ -239,7 +243,7 @@ path:hover + .tooltip {
 }
 
 .right_pane {
-	flex: 2;
+	width: 40%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -311,7 +315,7 @@ path:hover + .tooltip {
 	}
 
 	nav li a:hover:not(.current) {
-		font-weight: bold;
+		font-family: ClanOTBold;
 		text-decoration-line: underline;
 		text-decoration-thickness: 2px;
 		text-underline-offset: 6px;
